IATI Schema Changes -*-Outline-*-

* Next release

** Activities

- [*] corrected content model for conditions/condition, which
  previously was hidden by misplaced xsd:annotation element (Redmine
  issue #72)

- in documentation, no longer specify default for optional
  iati-activities/@version attribute


* 2011-03-11 changes (version 2.0 beta)

WARNING: this release contains a large number of
backwards-incompatible changes for alignment with the most
recently-approved IATI standard (see exceptions below).

[*] designates a backwards-incompatible change

** Activities

- [*] make reporting-org/@ref required

- [*] make reporting-org/@type required

- [*] make participating-org/@role required

- [*] make participating-org/@type required

- [*] remove recipient-country/@type

- [*] make recipient-country/@code required

- [*] remove collaboration-type/@type

- [*] remove default-flow-type/@type

- [*] remove default-aid-type/@type

- [*] remove default-finance-type/@type

- [*] remove sector/@type

- [*] remove default-tied-status/@type

- make policy-marker/@significance optional

- make policy-marker/@code optional

- [*] remove policy-marker/@type

- [*] remove activity-status/@type

- [*] remove contact-info/person-name/@xml:lang

- [*] remove activity-website/@xml:lang

- [*] remove transaction/status

- [*] remove transaction/provider-activity

- [*] remove transaction/receiver-activity

- [*] remove transaction/@flow

- [*] remove transaction/@type

- [*] make transaction/transaction-type/@code required

- [*] remove transaction/transaction-type/@type

- [*] remove transaction/provider-org/@type

- [*] remove transaction/provider-org/@xml:lang

- [*] remove transaction/receiver-org/@type

- [*] remove transaction/receiver-org/@xml:lang

- [*] remove transaction/value/@type

- [*] remove transaction/flow-type/@type

- [*] remove transaction/finance-type/@type

- [*] remove transaction/aid-type/@type

- [*] remove transaction/disbursement-channel/@type
