@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+
+<!-- Test that the schema allows recipient-org-budget with optional ref -->
+<iati-organisation>
+  <iati-identifier>12345</iati-identifier>
+  <recipient-org-budget>
+    <recipient-org>No code</recipient-org>
+    <period-start iso-date="2010-01-01"/>
+    <period-end iso-date="2010-12-31">31 December, 2010</period-end>
+    <value value-date="2010-07-07">100</value>
+  </recipient-org-budget>
+</iati-organisation>
